// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options: YAML should accept yaml stringify options 1`] = `
"---
veryLong: This is a long string that would normally wrap over multiple lines when the text exceeds a certain length.
---

# typedoc-plugin-frontmatter

## Interfaces

- [SomeInterface](interfaces/SomeInterface.md)
"
`;

exports[`Options: YAML should prepend frontmatter 1`] = `
"---
title: SomeInterface
layout: blog
navOrder: 1
hide: true
tagOne: 0
tagTwo: "'Frontmatter' tag"
---

# Interface: SomeInterface
"
`;

exports[`Options: YAML should prepend frontmatter for readme page 1`] = `
"---
title: typedoc-plugin-frontmatter
layout: blog
veryLong: This is a long string that would normally wrap over multiple lines
  when the text exceeds a certain length.
navOrder: 1
hide: true
onReadme: true
---

# The Readme
"
`;

exports[`Options: YAML should prepend frontmatter to index page 1`] = `
"---
title: typedoc-plugin-frontmatter
layout: blog
veryLong: This is a long string that would normally wrap over multiple lines
  when the text exceeds a certain length.
navOrder: 1
hide: true
onIndex: true
---

# typedoc-plugin-frontmatter

## Interfaces

- [SomeInterface](interfaces/SomeInterface.md)
"
`;

exports[`Options: YAML should prepend frontmatter with preserved tags 1`] = `
"---
title: SomeInterface
layout: blog
veryLong: This is a long string that would normally wrap over multiple lines
  when the text exceeds a certain length.
navOrder: 1
hide: true
tagOne: 0
tagTwo: "'Frontmatter' tag"
---

# Interface: SomeInterface

## Tag One

0

## Tag Two

'Frontmatter' tag
"
`;
